gdmchooser/XDMCP:  - fix harmless warning getting logged as CRITICAL when enumerating interfaces 	http://bugzilla.gnome.org/show_bug.cgi?id=544790  - unbreak XDMCP discovery on the IPv6-mapped IPv4 broadcast address by unsetting 	IPV6_V6ONLY socket option (obtained from NetBSD pkgsrc) 	http://bugzilla.gnome.org/show_bug.cgi?id=544730

Approved by: marcus@